BUGFIX
#Datum 07.04.2016
#Zeit 4h
#Info
- CSS angepasst an Scrollbars
- taskboard hat nen „taskboard-content“ für die Scrollbars bekommen

--- a/Workspace/Scrumiverse/WebContent/resources/css/backlog.css
+++ b/Workspace/Scrumiverse/WebContent/resources/css/backlog.css
@@ -1,11 +1,12 @@
+#action_content::-webkit-scrollbar{display: none;}
+
 #backlog {
     width: 100%;
-    padding: 30px 20px 0px 20px;
+    padding: 30px 10px 0px 10px;
     height: calc(100% - 50px);
     overflow-y: scroll;
     overflow-x: hidden;
 }
-#backlog::-webkit-scrollbar {display: run-in;}
 
 #backlog > .backlog-settings{
     position: fixed;
