--- a/Workspace/Scrumiverse/WebContent/resources/css/dashboard.css
+++ b/Workspace/Scrumiverse/WebContent/resources/css/dashboard.css
@@ -1,20 +1,3 @@
-::-webkit-scrollbar {
-    width: 16px;
-}
-
-::-webkit-scrollbar-track {
-    background-color: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: #666666;
-    border: 3px solid #303030;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: #e5e5e5;
-}
-
 #dashboard {		
 	position: relative;
 	top: 10px;
